// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChapterTitle renders correctly 1`] = `
<header
  className="header is-dark is-default"
>
  <div>
    <h1
      className="title"
    >
      FOO
    </h1>
  </div>
  <div>
    <h3
      aria-label="BAR"
      className="subtitle"
    >
      <span
        className="line"
      >
        <span
          className="letter"
          style={
            Object {
              "transition": "opacity 100ms 40ms, transform 100ms 40ms",
            }
          }
        >
          <span
            className="letter-inner"
            style={
              Object {
                "transform": null,
              }
            }
          >
            B
          </span>
        </span>
        <span
          className="letter"
          style={
            Object {
              "transition": "opacity 200ms 80ms, transform 200ms 80ms",
            }
          }
        >
          <span
            className="letter-inner"
            style={
              Object {
                "transform": null,
              }
            }
          >
            A
          </span>
        </span>
        <span
          className="letter"
          style={
            Object {
              "transition": "opacity 300ms 120ms, transform 300ms 120ms",
            }
          }
        >
          <span
            className="letter-inner"
            style={
              Object {
                "transform": null,
              }
            }
          >
            R
          </span>
        </span>
      </span>
    </h3>
  </div>
</header>
`;

exports[`ChapterTitle renders correctly without title 1`] = `
<header
  className="header is-dark is-default"
>
  <div>
    <h3
      aria-label="BAR"
      className="subtitle"
    >
      <span
        className="line"
      >
        <span
          className="letter"
          style={
            Object {
              "transition": "opacity 100ms 40ms, transform 100ms 40ms",
            }
          }
        >
          <span
            className="letter-inner"
            style={
              Object {
                "transform": null,
              }
            }
          >
            B
          </span>
        </span>
        <span
          className="letter"
          style={
            Object {
              "transition": "opacity 200ms 80ms, transform 200ms 80ms",
            }
          }
        >
          <span
            className="letter-inner"
            style={
              Object {
                "transform": null,
              }
            }
          >
            A
          </span>
        </span>
        <span
          className="letter"
          style={
            Object {
              "transition": "opacity 300ms 120ms, transform 300ms 120ms",
            }
          }
        >
          <span
            className="letter-inner"
            style={
              Object {
                "transform": null,
              }
            }
          >
            R
          </span>
        </span>
      </span>
    </h3>
  </div>
</header>
`;
